# rs_ordt

./: Cargo.toml  README.md
src/: lib.rs  strength.rs  yardstick.rs
